{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 288,
  "lineage": "c8867b2c-f683-873a-8e01-2383856711df",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:744359207202:security-group/sg-03e26025d02fc7cd2",
            "description": "EKS cluster control plane security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03e26025d02fc7cd2",
            "ingress": [],
            "name": "private-eks-fargate-cluster-sg",
            "name_prefix": "",
            "owner_id": "744359207202",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "private-eks-fargate-cluster-sg",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "private-eks-fargate-cluster-sg",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d2719b879c4549d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "744359207202",
            "id": "sg-03e26025d02fc7cd2",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:744359207202:security-group/sg-0e5b88e6db389d1a3",
            "description": "Security group for Fargate pods and nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e5b88e6db389d1a3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Control plane to node kubelet/pods",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "Pod-to-pod communication",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "private-eks-fargate-node-sg",
            "name_prefix": "",
            "owner_id": "744359207202",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "private-eks-fargate-node-sg",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true",
              "kubernetes.io/cluster/private-eks-fargate": "owned"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "private-eks-fargate-node-sg",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true",
              "kubernetes.io/cluster/private-eks-fargate": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d2719b879c4549d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "744359207202",
            "id": "sg-0e5b88e6db389d1a3",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_ingress_nodes_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node/pod to cluster API",
            "from_port": 443,
            "id": "sgrule-875703787",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-03e26025d02fc7cd2",
            "security_group_rule_id": "sgr-0ab1c54d17991ba85",
            "self": false,
            "source_security_group_id": "sg-0e5b88e6db389d1a3",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08519ea37a51171d7",
            "arn": "arn:aws:ec2:us-east-1:744359207202:elastic-ip/eipalloc-08519ea37a51171d7",
            "domain": "vpc",
            "id": "eipalloc-08519ea37a51171d7",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-205-152-174.compute-1.amazonaws.com",
            "public_ip": "54.205.152.174",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "Name": "private-eks-fargate-vpc-nat-eip-1",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "private-eks-fargate-vpc-nat-eip-1",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "744359207202",
            "id": "eipalloc-08519ea37a51171d7",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b7e319ea1d472b05",
            "arn": "arn:aws:ec2:us-east-1:744359207202:elastic-ip/eipalloc-0b7e319ea1d472b05",
            "domain": "vpc",
            "id": "eipalloc-0b7e319ea1d472b05",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-208-81-169.compute-1.amazonaws.com",
            "public_ip": "3.208.81.169",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "Name": "private-eks-fargate-vpc-nat-eip-2",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "private-eks-fargate-vpc-nat-eip-2",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "744359207202",
            "id": "eipalloc-0b7e319ea1d472b05",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0187a00d3cd25bdc7",
            "arn": "arn:aws:ec2:us-east-1:744359207202:elastic-ip/eipalloc-0187a00d3cd25bdc7",
            "domain": "vpc",
            "id": "eipalloc-0187a00d3cd25bdc7",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-92-123-147.compute-1.amazonaws.com",
            "public_ip": "3.92.123.147",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "Name": "private-eks-fargate-vpc-nat-eip-3",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "private-eks-fargate-vpc-nat-eip-3",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "744359207202",
            "id": "eipalloc-0187a00d3cd25bdc7",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:744359207202:internet-gateway/igw-0d91850ce5627a095",
            "id": "igw-0d91850ce5627a095",
            "owner_id": "744359207202",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "Name": "private-eks-fargate-vpc-igw",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "private-eks-fargate-vpc-igw",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true"
            },
            "vpc_id": "vpc-05d2719b879c4549d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "744359207202",
            "id": "igw-0d91850ce5627a095",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08519ea37a51171d7",
            "association_id": "eipassoc-00416f1fc28d169e9",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0130d3f7c72485cdf",
            "network_interface_id": "eni-0f02ef370863ec4c8",
            "private_ip": "10.0.101.125",
            "public_ip": "54.205.152.174",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-003a4a09dbac77751",
            "tags": {
              "Environment": "production",
              "Name": "private-eks-fargate-vpc-nat-us-east-1a",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "private-eks-fargate-vpc-nat-us-east-1a",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true"
            },
            "vpc_id": "vpc-05d2719b879c4549d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "744359207202",
            "id": "nat-0130d3f7c72485cdf",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b7e319ea1d472b05",
            "association_id": "eipassoc-01a885c791c863aad",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-08c42cafc0ac9e541",
            "network_interface_id": "eni-0161128f32119c99c",
            "private_ip": "10.0.102.252",
            "public_ip": "3.208.81.169",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0cf4feccf45b503fa",
            "tags": {
              "Environment": "production",
              "Name": "private-eks-fargate-vpc-nat-us-east-1b",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "private-eks-fargate-vpc-nat-us-east-1b",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true"
            },
            "vpc_id": "vpc-05d2719b879c4549d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "744359207202",
            "id": "nat-08c42cafc0ac9e541",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0187a00d3cd25bdc7",
            "association_id": "eipassoc-0e0510ad1a73126d7",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0d285067c90d6c80e",
            "network_interface_id": "eni-0a28aca1f335e6e26",
            "private_ip": "10.0.103.45",
            "public_ip": "3.92.123.147",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04ed284ba5aa197f6",
            "tags": {
              "Environment": "production",
              "Name": "private-eks-fargate-vpc-nat-us-east-1c",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "private-eks-fargate-vpc-nat-us-east-1c",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true"
            },
            "vpc_id": "vpc-05d2719b879c4549d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "744359207202",
            "id": "nat-0d285067c90d6c80e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:744359207202:route-table/rtb-05e045e8f6ea6095c",
            "id": "rtb-05e045e8f6ea6095c",
            "owner_id": "744359207202",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0130d3f7c72485cdf",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "private-eks-fargate-vpc-private-rt-1",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "private-eks-fargate-vpc-private-rt-1",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d2719b879c4549d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "744359207202",
            "id": "rtb-05e045e8f6ea6095c",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:744359207202:route-table/rtb-0a28ceaff3c3161d8",
            "id": "rtb-0a28ceaff3c3161d8",
            "owner_id": "744359207202",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08c42cafc0ac9e541",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "private-eks-fargate-vpc-private-rt-2",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "private-eks-fargate-vpc-private-rt-2",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d2719b879c4549d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "744359207202",
            "id": "rtb-0a28ceaff3c3161d8",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:744359207202:route-table/rtb-01dbee5831e649a88",
            "id": "rtb-01dbee5831e649a88",
            "owner_id": "744359207202",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d285067c90d6c80e",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "private-eks-fargate-vpc-private-rt-3",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "private-eks-fargate-vpc-private-rt-3",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d2719b879c4549d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "744359207202",
            "id": "rtb-01dbee5831e649a88",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:744359207202:route-table/rtb-0b96776c6f15c2e91",
            "id": "rtb-0b96776c6f15c2e91",
            "owner_id": "744359207202",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d91850ce5627a095",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "private-eks-fargate-vpc-public-rt",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "private-eks-fargate-vpc-public-rt",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d2719b879c4549d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "744359207202",
            "id": "rtb-0b96776c6f15c2e91",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02dcd388a36ce0d50",
            "region": "us-east-1",
            "route_table_id": "rtb-05e045e8f6ea6095c",
            "subnet_id": "subnet-0bcb46ef2bac2ac3e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "744359207202",
            "id": "rtbassoc-02dcd388a36ce0d50",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c6a4dfc8f78164c",
            "region": "us-east-1",
            "route_table_id": "rtb-0a28ceaff3c3161d8",
            "subnet_id": "subnet-02e6810ee9184be1e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "744359207202",
            "id": "rtbassoc-01c6a4dfc8f78164c",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6712a9a45a4d1de",
            "region": "us-east-1",
            "route_table_id": "rtb-01dbee5831e649a88",
            "subnet_id": "subnet-09bd57d39b017be65"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "744359207202",
            "id": "rtbassoc-0f6712a9a45a4d1de",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09a22ea4c1f3ba8c6",
            "region": "us-east-1",
            "route_table_id": "rtb-0b96776c6f15c2e91",
            "subnet_id": "subnet-003a4a09dbac77751"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "744359207202",
            "id": "rtbassoc-09a22ea4c1f3ba8c6",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0489a09f24e1495db",
            "region": "us-east-1",
            "route_table_id": "rtb-0b96776c6f15c2e91",
            "subnet_id": "subnet-0cf4feccf45b503fa"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "744359207202",
            "id": "rtbassoc-0489a09f24e1495db",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0968e215bf58e3680",
            "region": "us-east-1",
            "route_table_id": "rtb-0b96776c6f15c2e91",
            "subnet_id": "subnet-04ed284ba5aa197f6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "744359207202",
            "id": "rtbassoc-0968e215bf58e3680",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:744359207202:security-group/sg-051ad4734d0a844ba",
            "description": "Security group for VPC interface endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-051ad4734d0a844ba",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTPS from within VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "private-eks-fargate-vpc-vpce-sg",
            "name_prefix": "",
            "owner_id": "744359207202",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "private-eks-fargate-vpc-vpce-sg",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "private-eks-fargate-vpc-vpce-sg",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d2719b879c4549d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "744359207202",
            "id": "sg-051ad4734d0a844ba",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:744359207202:subnet/subnet-0bcb46ef2bac2ac3e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bcb46ef2bac2ac3e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "744359207202",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "Name": "private-eks-fargate-vpc-private-us-east-1a",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true",
              "kubernetes.io/cluster/private-eks-fargate": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "private-eks-fargate-vpc-private-us-east-1a",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true",
              "kubernetes.io/cluster/private-eks-fargate": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-05d2719b879c4549d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "744359207202",
            "id": "subnet-0bcb46ef2bac2ac3e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:744359207202:subnet/subnet-02e6810ee9184be1e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e6810ee9184be1e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "744359207202",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "Name": "private-eks-fargate-vpc-private-us-east-1b",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true",
              "kubernetes.io/cluster/private-eks-fargate": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "private-eks-fargate-vpc-private-us-east-1b",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true",
              "kubernetes.io/cluster/private-eks-fargate": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-05d2719b879c4549d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "744359207202",
            "id": "subnet-02e6810ee9184be1e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:744359207202:subnet/subnet-09bd57d39b017be65",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09bd57d39b017be65",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "744359207202",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "Name": "private-eks-fargate-vpc-private-us-east-1c",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true",
              "kubernetes.io/cluster/private-eks-fargate": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "private-eks-fargate-vpc-private-us-east-1c",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true",
              "kubernetes.io/cluster/private-eks-fargate": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-05d2719b879c4549d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "744359207202",
            "id": "subnet-09bd57d39b017be65",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:744359207202:subnet/subnet-003a4a09dbac77751",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003a4a09dbac77751",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "744359207202",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "Name": "private-eks-fargate-vpc-public-us-east-1a",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true",
              "kubernetes.io/cluster/private-eks-fargate": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "private-eks-fargate-vpc-public-us-east-1a",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true",
              "kubernetes.io/cluster/private-eks-fargate": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-05d2719b879c4549d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "744359207202",
            "id": "subnet-003a4a09dbac77751",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:744359207202:subnet/subnet-0cf4feccf45b503fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cf4feccf45b503fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "744359207202",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "Name": "private-eks-fargate-vpc-public-us-east-1b",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true",
              "kubernetes.io/cluster/private-eks-fargate": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "private-eks-fargate-vpc-public-us-east-1b",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true",
              "kubernetes.io/cluster/private-eks-fargate": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-05d2719b879c4549d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "744359207202",
            "id": "subnet-0cf4feccf45b503fa",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:744359207202:subnet/subnet-04ed284ba5aa197f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ed284ba5aa197f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "744359207202",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "Name": "private-eks-fargate-vpc-public-us-east-1c",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true",
              "kubernetes.io/cluster/private-eks-fargate": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "private-eks-fargate-vpc-public-us-east-1c",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true",
              "kubernetes.io/cluster/private-eks-fargate": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-05d2719b879c4549d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "744359207202",
            "id": "subnet-04ed284ba5aa197f6",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:744359207202:vpc/vpc-05d2719b879c4549d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05d51851f8e0e8270",
            "default_route_table_id": "rtb-00fa08ad8443da87c",
            "default_security_group_id": "sg-0ba4601b45d76f649",
            "dhcp_options_id": "dopt-01399d80c4ee8a476",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05d2719b879c4549d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00fa08ad8443da87c",
            "owner_id": "744359207202",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "Name": "private-eks-fargate-vpc",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true",
              "kubernetes.io/cluster/private-eks-fargate": "shared"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "private-eks-fargate-vpc",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true",
              "kubernetes.io/cluster/private-eks-fargate": "shared"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "744359207202",
            "id": "vpc-05d2719b879c4549d",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "autoscaling",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:744359207202:vpc-endpoint/vpce-0fdb69529cc4a63ff",
            "dns_entry": [
              {
                "dns_name": "vpce-0fdb69529cc4a63ff-7xftr4oe.autoscaling.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0fdb69529cc4a63ff-7xftr4oe-us-east-1c.autoscaling.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0fdb69529cc4a63ff-7xftr4oe-us-east-1b.autoscaling.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0fdb69529cc4a63ff-7xftr4oe-us-east-1a.autoscaling.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "autoscaling.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z047399938ZXI4E8I3QHM"
              },
              {
                "dns_name": "autoscaling.us-east-1.api.aws",
                "hosted_zone_id": "Z0470220345C3T5PHID3V"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0fdb69529cc4a63ff",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0545b11f8f48f53db",
              "eni-0841444fb56abcbbb",
              "eni-0a52ae1102aecd515"
            ],
            "owner_id": "744359207202",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-051ad4734d0a844ba"
            ],
            "service_name": "com.amazonaws.us-east-1.autoscaling",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.112",
                "subnet_id": "subnet-0bcb46ef2bac2ac3e"
              },
              {
                "ipv4": "10.0.2.171",
                "subnet_id": "subnet-02e6810ee9184be1e"
              },
              {
                "ipv4": "10.0.3.158",
                "subnet_id": "subnet-09bd57d39b017be65"
              }
            ],
            "subnet_ids": [
              "subnet-02e6810ee9184be1e",
              "subnet-09bd57d39b017be65",
              "subnet-0bcb46ef2bac2ac3e"
            ],
            "tags": {
              "Environment": "production",
              "Name": "private-eks-fargate-vpc-autoscaling-endpoint",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "private-eks-fargate-vpc-autoscaling-endpoint",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-05d2719b879c4549d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "744359207202",
            "id": "vpce-0fdb69529cc4a63ff",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.vpc_endpoints",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_region.current"
          ]
        },
        {
          "index_key": "ec2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:744359207202:vpc-endpoint/vpce-0c8fe1fd83b4e06c6",
            "dns_entry": [
              {
                "dns_name": "vpce-0c8fe1fd83b4e06c6-654qi8vc.ec2.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0c8fe1fd83b4e06c6-654qi8vc-us-east-1b.ec2.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0c8fe1fd83b4e06c6-654qi8vc-us-east-1c.ec2.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0c8fe1fd83b4e06c6-654qi8vc-us-east-1a.ec2.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ec2.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0474293DGL0OEXGWL24"
              },
              {
                "dns_name": "ec2.us-east-1.api.aws",
                "hosted_zone_id": "Z0951187202075RFRKW65"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0c8fe1fd83b4e06c6",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00b1cd62a017bd4dd",
              "eni-02d16a65946ce134b",
              "eni-0ad59f9537e965d58"
            ],
            "owner_id": "744359207202",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-051ad4734d0a844ba"
            ],
            "service_name": "com.amazonaws.us-east-1.ec2",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.25",
                "subnet_id": "subnet-0bcb46ef2bac2ac3e"
              },
              {
                "ipv4": "10.0.2.132",
                "subnet_id": "subnet-02e6810ee9184be1e"
              },
              {
                "ipv4": "10.0.3.117",
                "subnet_id": "subnet-09bd57d39b017be65"
              }
            ],
            "subnet_ids": [
              "subnet-02e6810ee9184be1e",
              "subnet-09bd57d39b017be65",
              "subnet-0bcb46ef2bac2ac3e"
            ],
            "tags": {
              "Environment": "production",
              "Name": "private-eks-fargate-vpc-ec2-endpoint",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "private-eks-fargate-vpc-ec2-endpoint",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-05d2719b879c4549d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "744359207202",
            "id": "vpce-0c8fe1fd83b4e06c6",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.vpc_endpoints",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_region.current"
          ]
        },
        {
          "index_key": "ecr.api",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:744359207202:vpc-endpoint/vpce-086e214935b8e48b7",
            "dns_entry": [
              {
                "dns_name": "vpce-086e214935b8e48b7-zrl5xa08.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-086e214935b8e48b7-zrl5xa08-us-east-1a.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-086e214935b8e48b7-zrl5xa08-us-east-1b.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-086e214935b8e48b7-zrl5xa08-us-east-1c.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "api.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z00131651RV376BBXVYQ6"
              },
              {
                "dns_name": "ecr.us-east-1.api.aws",
                "hosted_zone_id": "Z09645391GOEQ73MA7RJK"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-086e214935b8e48b7",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0aafbc900e1b45f14",
              "eni-0e335f174f5acd328",
              "eni-0e38986d0b61543d6"
            ],
            "owner_id": "744359207202",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-051ad4734d0a844ba"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.api",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.47",
                "subnet_id": "subnet-0bcb46ef2bac2ac3e"
              },
              {
                "ipv4": "10.0.2.143",
                "subnet_id": "subnet-02e6810ee9184be1e"
              },
              {
                "ipv4": "10.0.3.78",
                "subnet_id": "subnet-09bd57d39b017be65"
              }
            ],
            "subnet_ids": [
              "subnet-02e6810ee9184be1e",
              "subnet-09bd57d39b017be65",
              "subnet-0bcb46ef2bac2ac3e"
            ],
            "tags": {
              "Environment": "production",
              "Name": "private-eks-fargate-vpc-ecr.api-endpoint",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "private-eks-fargate-vpc-ecr.api-endpoint",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-05d2719b879c4549d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "744359207202",
            "id": "vpce-086e214935b8e48b7",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.vpc_endpoints",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_region.current"
          ]
        },
        {
          "index_key": "ecr.dkr",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:744359207202:vpc-endpoint/vpce-08f4866dfa76ce50c",
            "dns_entry": [
              {
                "dns_name": "vpce-08f4866dfa76ce50c-s6lbuxr6.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-08f4866dfa76ce50c-s6lbuxr6-us-east-1a.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-08f4866dfa76ce50c-s6lbuxr6-us-east-1b.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-08f4866dfa76ce50c-s6lbuxr6-us-east-1c.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z09636872M2CT0J67AE0M"
              },
              {
                "dns_name": "*.dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z09636872M2CT0J67AE0M"
              },
              {
                "dns_name": "dkr-ecr.us-east-1.on.aws",
                "hosted_zone_id": "Z09539822I3S6ZV1TFI8D"
              },
              {
                "dns_name": "*.dkr-ecr.us-east-1.on.aws",
                "hosted_zone_id": "Z09539822I3S6ZV1TFI8D"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-08f4866dfa76ce50c",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0578cab40804eee09",
              "eni-0a89e5fc7bc239a33",
              "eni-0eaddc759b07ecc0b"
            ],
            "owner_id": "744359207202",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-051ad4734d0a844ba"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.dkr",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.246",
                "subnet_id": "subnet-0bcb46ef2bac2ac3e"
              },
              {
                "ipv4": "10.0.2.96",
                "subnet_id": "subnet-02e6810ee9184be1e"
              },
              {
                "ipv4": "10.0.3.71",
                "subnet_id": "subnet-09bd57d39b017be65"
              }
            ],
            "subnet_ids": [
              "subnet-02e6810ee9184be1e",
              "subnet-09bd57d39b017be65",
              "subnet-0bcb46ef2bac2ac3e"
            ],
            "tags": {
              "Environment": "production",
              "Name": "private-eks-fargate-vpc-ecr.dkr-endpoint",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "private-eks-fargate-vpc-ecr.dkr-endpoint",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-05d2719b879c4549d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "744359207202",
            "id": "vpce-08f4866dfa76ce50c",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.vpc_endpoints",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_region.current"
          ]
        },
        {
          "index_key": "elasticloadbalancing",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:744359207202:vpc-endpoint/vpce-0e5d854ad2d1b18db",
            "dns_entry": [
              {
                "dns_name": "vpce-0e5d854ad2d1b18db-hnoyrv8j.elasticloadbalancing.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0e5d854ad2d1b18db-hnoyrv8j-us-east-1c.elasticloadbalancing.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0e5d854ad2d1b18db-hnoyrv8j-us-east-1b.elasticloadbalancing.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0e5d854ad2d1b18db-hnoyrv8j-us-east-1a.elasticloadbalancing.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "elasticloadbalancing.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z001434828TVZH65SFOTO"
              },
              {
                "dns_name": "elasticloadbalancing.us-east-1.api.aws",
                "hosted_zone_id": "Z00143872VU11NJ3DWA90"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0e5d854ad2d1b18db",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0673d9de64e76bd6e",
              "eni-083e22ad00534a6fe",
              "eni-0bd16a7996fdfff8f"
            ],
            "owner_id": "744359207202",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-051ad4734d0a844ba"
            ],
            "service_name": "com.amazonaws.us-east-1.elasticloadbalancing",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.135",
                "subnet_id": "subnet-0bcb46ef2bac2ac3e"
              },
              {
                "ipv4": "10.0.2.100",
                "subnet_id": "subnet-02e6810ee9184be1e"
              },
              {
                "ipv4": "10.0.3.226",
                "subnet_id": "subnet-09bd57d39b017be65"
              }
            ],
            "subnet_ids": [
              "subnet-02e6810ee9184be1e",
              "subnet-09bd57d39b017be65",
              "subnet-0bcb46ef2bac2ac3e"
            ],
            "tags": {
              "Environment": "production",
              "Name": "private-eks-fargate-vpc-elasticloadbalancing-endpoint",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "private-eks-fargate-vpc-elasticloadbalancing-endpoint",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-05d2719b879c4549d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "744359207202",
            "id": "vpce-0e5d854ad2d1b18db",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.vpc_endpoints",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_region.current"
          ]
        },
        {
          "index_key": "logs",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:744359207202:vpc-endpoint/vpce-01f1a2678d7f048b4",
            "dns_entry": [
              {
                "dns_name": "vpce-01f1a2678d7f048b4-nww6uszi.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-01f1a2678d7f048b4-nww6uszi-us-east-1b.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-01f1a2678d7f048b4-nww6uszi-us-east-1c.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-01f1a2678d7f048b4-nww6uszi-us-east-1a.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0228183FRC96AQIRKIY"
              },
              {
                "dns_name": "streaming-logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0953156H05MCTHSMCRF"
              },
              {
                "dns_name": "streaming-logs.us-east-1.api.aws",
                "hosted_zone_id": "Z0012506YXGAQDLTDV1X"
              },
              {
                "dns_name": "logs.us-east-1.api.aws",
                "hosted_zone_id": "Z02287141CNBMSRU7LQAI"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-01f1a2678d7f048b4",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-02f90f9bdce0fc36d",
              "eni-05141e283b16bdfb2",
              "eni-0745028f9bf4309d0"
            ],
            "owner_id": "744359207202",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-051ad4734d0a844ba"
            ],
            "service_name": "com.amazonaws.us-east-1.logs",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.90",
                "subnet_id": "subnet-0bcb46ef2bac2ac3e"
              },
              {
                "ipv4": "10.0.2.137",
                "subnet_id": "subnet-02e6810ee9184be1e"
              },
              {
                "ipv4": "10.0.3.170",
                "subnet_id": "subnet-09bd57d39b017be65"
              }
            ],
            "subnet_ids": [
              "subnet-02e6810ee9184be1e",
              "subnet-09bd57d39b017be65",
              "subnet-0bcb46ef2bac2ac3e"
            ],
            "tags": {
              "Environment": "production",
              "Name": "private-eks-fargate-vpc-logs-endpoint",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "private-eks-fargate-vpc-logs-endpoint",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-05d2719b879c4549d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "744359207202",
            "id": "vpce-01f1a2678d7f048b4",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.vpc_endpoints",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_region.current"
          ]
        },
        {
          "index_key": "sts",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:744359207202:vpc-endpoint/vpce-0b8e290d05e4d1e34",
            "dns_entry": [
              {
                "dns_name": "vpce-0b8e290d05e4d1e34-zpwty820.sts.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0b8e290d05e4d1e34-zpwty820-us-east-1c.sts.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0b8e290d05e4d1e34-zpwty820-us-east-1a.sts.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0b8e290d05e4d1e34-zpwty820-us-east-1b.sts.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "sts.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0954357N9W1W0JVVQ64"
              },
              {
                "dns_name": "sts.us-east-1.api.aws",
                "hosted_zone_id": "Z02281771AT9ZCYVT8FEP"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0b8e290d05e4d1e34",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-05d95c7ea51b769e7",
              "eni-0855247df3f7d9c5d",
              "eni-0a8f361e6b039dd23"
            ],
            "owner_id": "744359207202",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-051ad4734d0a844ba"
            ],
            "service_name": "com.amazonaws.us-east-1.sts",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.117",
                "subnet_id": "subnet-0bcb46ef2bac2ac3e"
              },
              {
                "ipv4": "10.0.2.106",
                "subnet_id": "subnet-02e6810ee9184be1e"
              },
              {
                "ipv4": "10.0.3.176",
                "subnet_id": "subnet-09bd57d39b017be65"
              }
            ],
            "subnet_ids": [
              "subnet-02e6810ee9184be1e",
              "subnet-09bd57d39b017be65",
              "subnet-0bcb46ef2bac2ac3e"
            ],
            "tags": {
              "Environment": "production",
              "Name": "private-eks-fargate-vpc-sts-endpoint",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "private-eks-fargate-vpc-sts-endpoint",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-05d2719b879c4549d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "744359207202",
            "id": "vpce-0b8e290d05e4d1e34",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.vpc_endpoints",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_region.current"
          ]
        },
        {
          "index_key": "xray",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:744359207202:vpc-endpoint/vpce-0dbcf1e27a116354b",
            "dns_entry": [
              {
                "dns_name": "vpce-0dbcf1e27a116354b-lc9iwnz5.xray.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0dbcf1e27a116354b-lc9iwnz5-us-east-1c.xray.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0dbcf1e27a116354b-lc9iwnz5-us-east-1a.xray.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0dbcf1e27a116354b-lc9iwnz5-us-east-1b.xray.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "xray.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0953899202V69M9M9JGN"
              },
              {
                "dns_name": "xray.us-east-1.api.aws",
                "hosted_zone_id": "Z001476614W309HE4PNV6"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0dbcf1e27a116354b",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-02c8755122c649eb7",
              "eni-05e2df36cd55b2360",
              "eni-0b3da264e49504597"
            ],
            "owner_id": "744359207202",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-051ad4734d0a844ba"
            ],
            "service_name": "com.amazonaws.us-east-1.xray",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.196",
                "subnet_id": "subnet-0bcb46ef2bac2ac3e"
              },
              {
                "ipv4": "10.0.2.192",
                "subnet_id": "subnet-02e6810ee9184be1e"
              },
              {
                "ipv4": "10.0.3.243",
                "subnet_id": "subnet-09bd57d39b017be65"
              }
            ],
            "subnet_ids": [
              "subnet-02e6810ee9184be1e",
              "subnet-09bd57d39b017be65",
              "subnet-0bcb46ef2bac2ac3e"
            ],
            "tags": {
              "Environment": "production",
              "Name": "private-eks-fargate-vpc-xray-endpoint",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "private-eks-fargate-vpc-xray-endpoint",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-05d2719b879c4549d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "744359207202",
            "id": "vpce-0dbcf1e27a116354b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.vpc_endpoints",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:744359207202:vpc-endpoint/vpce-08368b87033c9f333",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-08368b87033c9f333",
            "ip_address_type": "ipv4",
            "owner_id": "744359207202",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "region": "us-east-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-01dbee5831e649a88",
              "rtb-05e045e8f6ea6095c",
              "rtb-0a28ceaff3c3161d8"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Environment": "production",
              "Name": "private-eks-fargate-vpc-s3-endpoint",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "private-eks-fargate-vpc-s3-endpoint",
              "Owner": "platform-team",
              "Project": "eks-fargate",
              "Terraform": "true"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-05d2719b879c4549d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "744359207202",
            "id": "vpce-08368b87033c9f333",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    }
  ]
}